# SciFiTestbeamAndSimulation

./: .clang_complete  BeamTest_Week2-SciFi_Run_Details.ods  Beam_test_May2015_runnumbers.ods  CMakeLists.txt  May_2016_setup.cfg  README.md  SciFiTestbeamAndSimulation_doxyfile  runNumbers2Use.txt
FTDigitisation/: FTClusterCreator.h
FTDigitisation/src/: IMCFTDepositPositionTool.h  IMCFTEnergyInFibreTool.h  MCFTDepositCreator.cpp  MCFTDepositCreator.h  MCFTDepositPositionTool.cpp  MCFTDepositPositionTool.h  MCFTEnergyInFibreTool.cpp  MCFTEnergyInFibreTool.h
RunNumbers/: runNumbers.txt
include/: Alignment.h  Calibration.h  Channel.h  Cluster.h  ClusterAlgorithms.h  ClusterCreator.h  ClusterMonitor.h  ConfigParser.h  EDouble.h  lhcbStyle.h
main/: CMakeLists.txt  attScan.cpp  checkBeamProfile.cpp  clusterAnalysis.cpp  clusterisation.cpp  gains.cpp  produceCorrectedFile.cpp
python/plotting/: lhcbStyle.py  plotClusterProperties.py
python/simulation/: gauss-ganga.py  gauss-job-V5_renato.py  gauss-pgun-job-luigi.py  gauss-pgun-job.py  runFTSimParallel.py  runFTSimulation.py  someTestScript.py
src/: Alignment.cpp  CMakeLists.txt  Calibration.cpp  Channel.cpp  Cluster.cpp  ClusterAlgorithms.cpp  ClusterCreator.cpp  ClusterMonitor.cpp  ConfigParser.cpp  EDouble.cpp  lhcbStyle.cpp
